=== 0.6.0 :: In Progress

* Much of the supporting functionality that makes RubyCAS-Server
  act as a well-behaved Linux service has been abstracted out
  into its own library. This new library is called Picnic and is
  now a gem dependency for RubyCAS-Server. You can find out more about
  it at http://code.google.com/p/camping-picnic/.
* When an authentication failure occurs (because the user submitted
  invalid credentials or the login ticket is missing), the server
  now returns a 401 (Unauthorized) response instead of 200.
* An encryption-enabled version of the SQL authenticator is now
  available. For more info have a look at:
  http://code.google.com/p/rubycas-server/wiki/UsingTheSQLEncryptedAuthenticator
* Better compatibility with Oracle databases. The database migration 
  no longer tries to create tables with long names when long
  table names are not supported by the underlying database connector
  (issue #15).
* The server can now be configured to automatically downcase the
  username entered by users (dowcase_username option). So if a user
  enters "JSmith", the system will convert it to "jsmith" if the
  downcase_username option is set to true.
* Fixed bug with ActiveRecord 2.0.2 where service tickets were not
  being given a type (issue #37).

=== 0.5.1 :: 2007-12-20

* Tickets generated by the server should now be a lot more secure.
  The random string generator used for generating tickets now uses
  Crypt::ISAAC. Tickets have also been extended in length; STs, PTs
  and LTs can now extend up to 32 characters, and PGTs and PGT-IOUs 
  up to 64.

=== 0.5.0 :: 2007-09-20

* Gateway requests should now be handled correctly. When the request to the
  login page is made with gateway=true as one of the parameters, the CAS
  server will immediately redirect back to the target service along with
  a service ticket if an SSO session exists for the user (or without a
  service ticket if there is no pre-existing SSO session). 